got api subdomain to work with docs
