# app/controllers/forms.server.controller.js
@@ -70,74 +70,6 @@ exports.uploadPDF = function(req, res, next) {
 };
 
 /**
- * Upload PDF
- */
-/*
-exports.uploadSubmissionFile = function(req, res, next) {
-
-	console.log('inside uploadPDF');
-
-	// console.log('\n\nProperty Descriptor\n-----------');
-	// console.log(Object.getOwnPropertyDescriptor(req.files.file, 'path'));
-
-	console.log(req.files);
-
-	if(req.files){
-		var file, _user, _path;
-
-		for(var i=0; i<req.files.length; i++){
-			file = req.files[i];
-			_user = req.user;
-			_path = file.path;
-
-
-			if (file.size === 0) {
-				return next(new Error('File uploaded is EMPTY'));
-			}else if(file.size > 100000000){
-				return next(new Error('File uploaded exceeds MAX SIZE of 100MB'));
-			}else {
-				fs.exists(_path, function(exists) {
-
-					//If file exists move to user's form directory
-					if(exists) {
-						var newDestination = config.tmpUploadPath+_user.username;
-						var stat = null;
-						try {
-							stat = fs.statSync(newDestination);
-						} catch (err) {
-							fs.mkdirSync(newDestination);
-						}
-
-						if (stat && !stat.isDirectory()) {
-							console.log('Directory cannot be created');
-							return next(new Error('Directory cannot be created because an inode of a different type exists at "' + newDestination + '"'));
-						}
-
-						console.log(path.join(newDestination, pdfFile.filename));
-
-						fs.move(pdfFile.path, path.join(newDestination, pdfFile.filename), function (err) {
-							if (err) {
-								return next(new Error(err.message));
-							}
-							pdfFile.path = path.join(newDestination, pdfFile.filename);
-							console.log(pdfFile.filename + ' uploaded to ' + pdfFile.path);
-							res.json(pdfFile);
-						});
-
-					} else {
-						return next(new Error('Did NOT get your file!'));
-					}
-				});
-			}
-		}
-
-	}else {
-		return next(new Error('Uploaded files were NOT detected'));
-	}
-};
-*/
-
-/**
  * Delete a forms submissions
  */
 exports.deleteSubmissions = function(req, res) {
@@ -254,23 +186,27 @@ exports.listSubmissions = function(req, res) {
  * Create a new form
  */
 exports.create = function(req, res) {
+
+
+	if(!req.body.form){
+		console.log(err);
+		return res.status(400).send({
+			message: "Invalid Input"
+		});
+	}
 	var form = new Form(req.body.form);
 
 	form.admin = req.user._id;
-	console.log('Create a new form');
-	console.log(form);
-	console.log(req.body.form);
-	console.log(req.user);
 
 	form.save(function(err) {
 		if (err) {
 			console.log(err);
-			res.status(400).send({
+			return res.status(405).send({
 				message: errorHandler.getErrorMessage(err)
 			});
-		} else {
-			res.json(form);
 		}
+
+		res.json(form);
 	});
 };
 
@@ -300,7 +236,7 @@ exports.update = function(req, res) {
 	delete req.body.form.__v;
 	delete req.body.form._id;
 
-	//Unless we have 'admin' priviledges, updating form admin is disabled
+	//Unless we have 'admin' privileges, updating form admin is disabled
 	if(req.user.roles.indexOf('admin') === -1) delete req.body.form.admin;
 
 	//Do this so we can create duplicate fields
@@ -317,7 +253,7 @@ exports.update = function(req, res) {
 	form.save(function(err, form) {
 		if (err) {
 			console.log(err);
-			res.status(400).send({
+			res.status(405).send({
 				message: errorHandler.getErrorMessage(err)
 			});
 		} else {
@@ -377,7 +313,7 @@ exports.formByID = function(req, res, next, id) {
 			if (err) {
 				return next(err);
 			} else if (form === undefined || form === null) {
-				res.status(400).send({
+				res.status(404).send({
 					message: 'Form not found'
 				});
 			}
